<resources>
    <string name="app_name">SQLite Tutorial - Score Record</string>
    <string name="input_student_score">Input Student Score:</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="enter_student_score">Enter Student Score</string>
    <string name="textview">TextView</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="display">Display</string>
    <string name="add">Add</string>
    <string name="modify_student_score">Modify Student Score</string>
    <string name="delete">Delete</string>
    <string name="save_edit">Save Edit</string>
</resources>